compiler/lume_parser/src/snapshots/lume_parser__tests__member_snapshots@multiple.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = a.b.c;\")"
---
SOURCE_FILE@0..14
  LET_STMT@0..14
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    WHITESPACE@7..8 " "
    MEMBER_EXPR@8..13
      MEMBER_EXPR@8..11
        VARIABLE_EXPR@8..9
          NAME@8..9
            IDENT@8..9 "a"
        DOT@9..10 "."
        NAME@10..11
          IDENT@10..11 "b"
      DOT@11..12 "."
      NAME@12..13
        IDENT@12..13 "c"
    SEMICOLON@13..14 ";"
