compiler/lume_parser/src/snapshots/lume_parser__tests__module@spacecs.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"    \")"
---
SOURCE_FILE@0..4
  WHITESPACE@0..4 "    "
