compiler/lume_parser/src/snapshots/lume_parser__tests__namespace_snapshots@path_2.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"namespace std::io\")"
---
SOURCE_FILE@0..17
  NAMESPACE@0..17
    NAMESPACE_KW@0..9 "namespace"
    WHITESPACE@9..10 " "
    IMPORT_PATH@10..17
      NAME@10..13
        IDENT@10..13 "std"
      PATH_SEP@13..15 "::"
      NAME@15..17
        IDENT@15..17 "io"
