compiler/lume_parser/src/snapshots/lume_parser__tests__namespace_snapshots@path_3.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"namespace std::io::path\")"
---
SOURCE_FILE@0..23
  NAMESPACE@0..23
    NAMESPACE_KW@0..9 "namespace"
    WHITESPACE@9..10 " "
    IMPORT_PATH@10..23
      NAME@10..13
        IDENT@10..13 "std"
      PATH_SEP@13..15 "::"
      NAME@15..17
        IDENT@15..17 "io"
      PATH_SEP@17..19 "::"
      NAME@19..23
        IDENT@19..23 "path"
