compiler/lume_parser/src/snapshots/lume_parser__tests__namespace_snapshots@path_casing.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"namespace System::IO\")"
---
[
    Namespace(
        Namespace {
            path: ImportPath {
                path: [
                    Identifier {
                        name: "System",
                        location: Location(
                            10..16,
                        ),
                    },
                    Identifier {
                        name: "IO",
                        location: Location(
                            18..20,
                        ),
                    },
                ],
                location: Location(
                    10..20,
                ),
            },
            location: Location(
                0..20,
            ),
        },
    ),
]
