compiler/lume_parser/src/snapshots/lume_parser__tests__namespace_snapshots@unexpected_path_sep.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"namespace ::std\")"
---
SOURCE_FILE@0..13
  NAMESPACE@0..10
    NAMESPACE_KW@0..9 "namespace"
    WHITESPACE@9..10 " "
    IMPORT_PATH@10..10
      NAME@10..10
  IDENT@10..13 "std"

expected identifier@10..12
invalid top-level item@12..15
